# velma_controllers

./: CMakeLists.txt  deploy.lua  deploy_sim.lua  package.xml  test_trj.py
config/: behaviors.yaml  lookat.ops  master_config.yaml  torso.ops  velma.ops  velma_common.ops  velma_common_load.ops  velma_common_start.ops  velma_hardware.ops  velma_high_level.ops
launch/: joy_teleop.launch  tool_static_tf_publisher.launch  torso_controller.launch  torso_lookat.launch  velma_common_params.launch  velma_controler.launch  velma_controller.launch  velma_high_level.launch
scripts/: arm_markers.py  disable_controller.py  enable_controller.py  head_markers.py  int_markers_cimp.py  int_markers_head.py  test_trj.py
src/: fkin.inc  head_kinematics.cpp  head_kinematics.h  head_lookat.cpp  head_lookat.h  head_lookat3d.cpp  head_trajectory_generator.cpp  image_stamper.cpp  jacobian.inc  params.inc  torso_teleop_joy.cpp  trigger_generator.cpp  velma_controller.cpp  velma_fk.cpp  velma_fk.h  velma_grav.cpp  velma_grav.h  velma_service.cpp  velma_service_dart.cpp  velma_sim.cpp  velocity_limiter.cpp
src/components/: cartesian_impedance.cpp  decimator_wrench.cpp  double_aggregate1.cpp  double_aggregate2.cpp  double_split1.cpp  double_split2.cpp  join_limit_avoidance15.cpp  joint_generator15.cpp  joint_generator2.cpp  joint_impedance.cpp  joint_state_publisher33.cpp  joint_trajectory_action15.cpp  joint_trajectory_action2.cpp  library.cpp  mass_test.cpp  robot_mass_matrix.cpp  torque_publisher7.cpp  vector_concate2.cpp  vector_concate3.cpp  vector_concate4.cpp  vector_split3.cpp  vector_split4.cpp
